# Rivet

./: .gitignore  CMakeLists.txt  Dependencies.cmake  README.md  spec-driven-prompts.txt
Rivet/: CMakeLists.txt
Rivet/Source/: Rvtph.h
Rivet/Source/Rivet/: App.cpp  App.h  Editor.cpp  Input.cpp  Logger.cpp  Rivet.h  UI.h  Window.cpp  Window.h
Rivet/Source/Rivet/Assets/: AssetCache.h  AudioManager.h  ShaderManager.cpp  ShaderManager.h  TextureManager.cpp  TextureManager.h
Rivet/Source/Rivet/Audio/: Audio.h  AudioEngine.h  Sound.h
Rivet/Source/Rivet/Core/: App.cpp  Editor.h  Input.cpp  Input.h  Logger.h  Window.h
Rivet/Source/Rivet/Core/Assets/: AudioManager.cpp  ShaderManager.h  TextureManager.h
Rivet/Source/Rivet/Core/Audio/: Audio.cpp  AudioEngine.cpp
Rivet/Source/Rivet/Core/Events/: EventQueue.cpp  EventQueue.h
Rivet/Source/Rivet/Core/UI/: UI.cpp
Rivet/Source/Rivet/Events/: Event.h
Rivet/Source/Rivet/Physics/: PhysicsTypes.h
Rivet/Source/Rivet/Physics/2D/: Physics.cpp  Physics.h
Rivet/Source/Rivet/Renderer/: Buffer.cpp  Buffer.h  Camera2D.cpp  Renderer2D.cpp  Renderer2D.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
Rivet/Source/Rivet/Renderer/2D/: Camera.cpp  Camera.h  Renderer.cpp  Renderer.h
Rivet/Source/Rivet/Renderer/3D/: Camera3D.cpp  Camera3D.h  Mesh.cpp  Mesh.h  ObjLoader.cpp  ObjLoader.h
Rivet/Source/Rivet/Renderer/Common/: BufferLayout.cpp  BufferLayout.h  Shader.cpp
Rivet/Source/Rivet/UI/: Font.cpp  Font.h  UI.cpp  UI.h
Sandbox/: CMakeLists.txt
Sandbox/Source/: Main.cpp  Scene2D.cpp  Scene2D.h  Scene3D.cpp  Scene3D.h
Sandbox/assets/meshes/: capsule-man.glb
Sandbox/shaders/: basic.frag  basic.vert  basic3d.frag  basic3d.vert  quad.frag  quad.vert
Specs/: mission.md  roadmap.md  tech-stack.md
Specs/2026-04-17-core-loop-input/: plan.md  requirements.md  validation.md
Specs/2026-04-19-basic-renderer/: plan.md  requirements.md  validation.md
Specs/2026-04-19-buffer-layouts/: plan.md  requirements.md  validation.md
Specs/2026-04-19-events/: plan.md  requirements.md  validation.md
Specs/2026-04-19-gui-imgui/: plan.md  requirements.md  validation.md
Specs/2026-04-22-2d-drawing/: plan.md  requirements.md  validation.md
Specs/2026-04-22-asset-manager/: plan.md  requirements.md  validation.md
Specs/2026-04-22-audio/: plan.md  requirements.md  validation.md
Specs/2026-04-22-physics/: plan.md  requirements.md  validation.md
Specs/2026-04-23-ui-panels/: plan.md  requirements.md  validation.md
Specs/2026-04-25-3d-renderer/: plan.md  requirements.md  validation.md
Specs/2026-04-25-module-restructure/: plan.md  requirements.md  validation.md
